--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<canvas id="myCanvas" width="400" height="200"></canvas>
-
-<script>
-  const canvas = document.getElementById("myCanvas");
-  const context = canvas.getContext("2d");
-  context.fillStyle = "blue";
-  context.fillRect(10, 10, 100, 50);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OpenSouce</title>
+</head>
+<body>
+    This is our first opensource Project
+</body>
+</html>
